--- a/HackerNews/Base.lproj/Main_iPhone.storyboard
+++ b/HackerNews/Base.lproj/Main_iPhone.storyboard
@@ -172,6 +172,9 @@
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
                     </tabBarItem>
+                    <connections>
+                        <segue destination="ZjH-Uf-knr" kind="push" identifier="latesttoWebView" id="8rF-nL-EbF"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IGt-La-vWA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -205,6 +208,9 @@
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
                     </tabBarItem>
+                    <connections>
+                        <segue destination="ZjH-Uf-knr" kind="push" identifier="jobstoWebView" id="qBj-4v-4gv"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rW7-kr-Eee" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -322,7 +328,7 @@
                     </tabBarItem>
                     <navigationItem key="navigationItem" title="Top Stories" id="2z3-YY-CD6"/>
                     <connections>
-                        <segue destination="ZjH-Uf-knr" kind="push" identifier="toWebView" id="MQs-EZ-GAP"/>
+                        <segue destination="ZjH-Uf-knr" kind="push" identifier="topStoriestoWebView" id="MQs-EZ-GAP"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OLM-5g-Hiu" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -332,9 +338,9 @@
         <!--News Page-->
         <scene sceneID="E9S-UW-YzN">
             <objects>
-                <tableViewController id="fnA-Bg-GpQ" userLabel="News Page" sceneMemberID="viewController">
+                <tableViewController id="fnA-Bg-GpQ" userLabel="News Page" customClass="commentsTableViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="Htl-2K-sPi">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <sections>
@@ -483,7 +489,7 @@
                         <viewControllerLayoutGuide type="bottom" id="SXX-Ir-wgT"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="G8O-2L-Orm">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <webView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hTf-jy-juh">
@@ -504,11 +510,12 @@
                                     <color key="titleShadowColor" red="0.99991267919540405" green="1" blue="0.99988144636154175" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
-                                    <segue destination="fnA-Bg-GpQ" kind="push" id="fCW-3e-OmX"/>
+                                    <segue destination="fnA-Bg-GpQ" kind="push" identifier="webToComments" id="fCW-3e-OmX"/>
                                 </connections>
                             </button>
                         </barButtonItem>
                     </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="viewWeb" destination="hTf-jy-juh" id="Sa8-FD-uKO"/>
                     </connections>
@@ -648,5 +655,8 @@
         <simulatedOrientationMetrics key="orientation"/>
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
+    <inferredMetricsTieBreakers>
+        <segue reference="MQs-EZ-GAP"/>
+    </inferredMetricsTieBreakers>
     <color key="tintColor" red="0.91764705882352937" green="0.30196078431372547" blue="0.14901960784313725" alpha="1" colorSpace="calibratedRGB"/>
 </document>
