--- a/HackerNews/Base.lproj/Main_iPhone.storyboard
+++ b/HackerNews/Base.lproj/Main_iPhone.storyboard
@@ -350,9 +350,9 @@
         <!--News Page-->
         <scene sceneID="E9S-UW-YzN">
             <objects>
-                <tableViewController id="fnA-Bg-GpQ" userLabel="News Page" customClass="commentsTableViewController" sceneMemberID="viewController">
+                <tableViewController id="fnA-Bg-GpQ" userLabel="News Page" customClass="CommentsTableViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="Htl-2K-sPi">
-                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <sections>
@@ -522,9 +522,12 @@
                                     <color key="titleShadowColor" red="0.99991267919540405" green="1" blue="0.99988144636154175" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
-                                    <segue destination="fnA-Bg-GpQ" kind="push" identifier="webToComments" id="fCW-3e-OmX"/>
+                                    <action selector="commentsButton:" destination="ZjH-Uf-knr" eventType="touchUpInside" id="zdK-LD-LgZ"/>
                                 </connections>
                             </button>
+                            <connections>
+                                <segue destination="fnA-Bg-GpQ" kind="push" identifier="webToComments" id="hXM-Yt-JrL"/>
+                            </connections>
                         </barButtonItem>
                     </navigationItem>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
