--- a/HackerNews/CommentTableViewCell.xib
+++ b/HackerNews/CommentTableViewCell.xib
@@ -8,7 +8,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="gray" indentationWidth="10" reuseIdentifier="commentsCell" rowHeight="150" id="JlN-rQ-9j1">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="gray" indentationWidth="10" reuseIdentifier="commentsCell" rowHeight="150" id="JlN-rQ-9j1" customClass="CommentTableViewCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="150"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="JlN-rQ-9j1" id="cKg-4E-FgZ">
@@ -22,7 +22,7 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="mynegation " lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ulc-20-Knj" userLabel="List Title">
-                        <rect key="frame" x="44" y="8" width="85.5" height="21"/>
+                        <rect key="frame" x="44" y="8" width="86" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="zS0-Ge-xnU"/>
                         </constraints>
@@ -40,7 +40,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v3a-wY-eOD" userLabel="List Title">
-                        <rect key="frame" x="19" y="37" width="300" height="92.5"/>
+                        <rect key="frame" x="19" y="37" width="300" height="93"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="300" id="m7Z-kI-lfO"/>
                             <constraint firstAttribute="width" constant="300" id="xEU-O5-s7y"/>
@@ -81,6 +81,11 @@
                     </mask>
                 </variation>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="commentLabel" destination="v3a-wY-eOD" id="kV7-ld-pJW"/>
+                <outlet property="timeLabel" destination="yFf-ns-OMY" id="ujh-I9-WzT"/>
+                <outlet property="userLabel" destination="ulc-20-Knj" id="0vL-i8-fSz"/>
+            </connections>
             <point key="canvasLocation" x="104" y="-323"/>
         </tableViewCell>
     </objects>
