--- a/HackerNews/CommentTableViewCell.xib
+++ b/HackerNews/CommentTableViewCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6751" systemVersion="13F1077" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
@@ -21,29 +21,30 @@
                             <constraint firstAttribute="height" constant="20" id="44q-at-rMf"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="mynegation " lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ulc-20-Knj" userLabel="List Title">
-                        <rect key="frame" x="44" y="8" width="86" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="999" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="mynegation " lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ulc-20-Knj" userLabel="List Title">
+                        <rect key="frame" x="44" y="8" width="228" height="21"/>
                         <constraints>
+                            <constraint firstAttribute="width" priority="250" constant="228" id="D6H-Ta-vIV"/>
                             <constraint firstAttribute="height" constant="21" id="zS0-Ge-xnU"/>
                         </constraints>
                         <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="15"/>
                         <color key="textColor" red="0.57254901960000004" green="0.57254901960000004" blue="0.57254901960000004" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="36m" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yFf-ns-OMY" userLabel="List Title">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="36m" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yFf-ns-OMY" userLabel="List Title">
                         <rect key="frame" x="280" y="8" width="31" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="BLA-FW-w9P"/>
+                            <constraint firstAttribute="width" priority="250" constant="47" id="kTB-XZ-kwd"/>
                         </constraints>
                         <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="15"/>
                         <color key="textColor" red="0.57254901960000004" green="0.57254901960000004" blue="0.57254901960000004" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v3a-wY-eOD" userLabel="List Title">
-                        <rect key="frame" x="19" y="37" width="300" height="93"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v3a-wY-eOD" userLabel="List Title">
+                        <rect key="frame" x="44" y="37" width="266" height="100"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="300" id="m7Z-kI-lfO"/>
-                            <constraint firstAttribute="width" constant="300" id="xEU-O5-s7y"/>
+                            <constraint firstAttribute="height" priority="250" constant="92" id="TAV-O1-x2w"/>
                         </constraints>
                         <string key="text">πfs is a revolutionary new file system that, instead of wasting space storing your data on your hard drive, stores your data in π! You'll never run out of space again - π holds every file that could possibly exist! They said 100% compression was impossible? You're looking at it!
 
@@ -51,35 +52,21 @@
                         <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="14"/>
                         <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="m7Z-kI-lfO"/>
-                            </mask>
-                        </variation>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="v3a-wY-eOD" firstAttribute="top" secondItem="yFf-ns-OMY" secondAttribute="bottom" constant="8" id="3fq-3Q-JXB"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="v3a-wY-eOD" secondAttribute="trailing" constant="-7" id="4MY-34-7h7"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="v3a-wY-eOD" secondAttribute="bottom" constant="10" id="5OI-7L-CV5"/>
-                    <constraint firstItem="ulc-20-Knj" firstAttribute="top" secondItem="cKg-4E-FgZ" secondAttribute="topMargin" id="9LQ-2N-clE"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="yFf-ns-OMY" secondAttribute="trailing" constant="1" id="JGS-ZK-eWd"/>
-                    <constraint firstItem="J6f-Aj-t1s" firstAttribute="leading" secondItem="cKg-4E-FgZ" secondAttribute="leadingMargin" constant="11" id="Q3L-D3-cwb"/>
-                    <constraint firstItem="J6f-Aj-t1s" firstAttribute="top" secondItem="cKg-4E-FgZ" secondAttribute="topMargin" constant="1" id="UbO-f2-Fru"/>
-                    <constraint firstItem="v3a-wY-eOD" firstAttribute="leading" secondItem="cKg-4E-FgZ" secondAttribute="leadingMargin" constant="11" id="WDK-LM-rlE"/>
-                    <constraint firstItem="ulc-20-Knj" firstAttribute="leading" secondItem="J6f-Aj-t1s" secondAttribute="trailing" constant="5" id="dw2-BS-ShQ"/>
-                    <constraint firstItem="yFf-ns-OMY" firstAttribute="top" secondItem="cKg-4E-FgZ" secondAttribute="topMargin" id="eEy-as-jqa"/>
-                    <constraint firstItem="yFf-ns-OMY" firstAttribute="leading" secondItem="ulc-20-Knj" secondAttribute="trailing" constant="67" id="hQw-eC-05o"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="v3a-wY-eOD" secondAttribute="bottom" constant="12" id="m4l-bO-oIg"/>
-                    <constraint firstItem="v3a-wY-eOD" firstAttribute="top" secondItem="ulc-20-Knj" secondAttribute="bottom" constant="10" id="pXM-0X-2ES"/>
+                    <constraint firstItem="ulc-20-Knj" firstAttribute="leading" secondItem="J6f-Aj-t1s" secondAttribute="trailing" constant="5" id="HvP-WL-WPJ"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="yFf-ns-OMY" secondAttribute="trailing" constant="1" id="VEQ-IL-Awo"/>
+                    <constraint firstItem="J6f-Aj-t1s" firstAttribute="top" secondItem="cKg-4E-FgZ" secondAttribute="top" constant="9" id="blc-Q0-cPh"/>
+                    <constraint firstItem="yFf-ns-OMY" firstAttribute="leading" secondItem="ulc-20-Knj" secondAttribute="trailing" constant="8" id="cOy-2c-fdR"/>
+                    <constraint firstAttribute="bottom" secondItem="v3a-wY-eOD" secondAttribute="bottom" constant="12" id="et0-Rm-3Lx"/>
+                    <constraint firstItem="ulc-20-Knj" firstAttribute="top" secondItem="cKg-4E-FgZ" secondAttribute="topMargin" id="fgi-8t-hDq"/>
+                    <constraint firstItem="yFf-ns-OMY" firstAttribute="top" secondItem="cKg-4E-FgZ" secondAttribute="topMargin" id="fpW-ZL-Xvr"/>
+                    <constraint firstAttribute="trailing" secondItem="v3a-wY-eOD" secondAttribute="trailing" constant="10" id="kAg-Hf-3jK"/>
+                    <constraint firstItem="v3a-wY-eOD" firstAttribute="leading" secondItem="cKg-4E-FgZ" secondAttribute="leading" constant="44" id="lKV-wd-JI6"/>
+                    <constraint firstItem="v3a-wY-eOD" firstAttribute="top" secondItem="yFf-ns-OMY" secondAttribute="bottom" constant="8" id="pV4-PQ-OSU"/>
+                    <constraint firstItem="J6f-Aj-t1s" firstAttribute="leading" secondItem="cKg-4E-FgZ" secondAttribute="leading" constant="19" id="qEe-BU-fKu"/>
                 </constraints>
-                <variation key="default">
-                    <mask key="constraints">
-                        <exclude reference="5OI-7L-CV5"/>
-                        <exclude reference="pXM-0X-2ES"/>
-                        <exclude reference="hQw-eC-05o"/>
-                    </mask>
-                </variation>
             </tableViewCellContentView>
             <connections>
                 <outlet property="commentLabel" destination="v3a-wY-eOD" id="kV7-ld-pJW"/>
