--- a/HackerNews/Base.lproj/Main_iPhone.storyboard
+++ b/HackerNews/Base.lproj/Main_iPhone.storyboard
@@ -434,7 +434,7 @@
                         <viewControllerLayoutGuide type="bottom" id="SXX-Ir-wgT"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="G8O-2L-Orm">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" fixedFrame="YES" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="ZJY-Zr-hTg">
@@ -445,6 +445,38 @@
                                 <rect key="frame" x="0.0" y="2" width="320" height="504"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </webView>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="u8H-Y7-9RX">
+                                <rect key="frame" x="0.0" y="460" width="320" height="44"/>
+                                <items>
+                                    <barButtonItem image="Safari Back" style="plain" id="6Of-Z4-Tdn">
+                                        <color key="tintColor" red="0.91764705879999997" green="0.30196078430000001" blue="0.14901960780000001" alpha="1" colorSpace="calibratedRGB"/>
+                                        <connections>
+                                            <action selector="goBack" destination="hTf-jy-juh" id="0e2-iu-StQ"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="9S6-Tk-29a"/>
+                                    <barButtonItem image="Safari Forward" id="9YO-7g-K1a">
+                                        <color key="tintColor" red="0.91764705879999997" green="0.30196078430000001" blue="0.14901960780000001" alpha="1" colorSpace="calibratedRGB"/>
+                                        <connections>
+                                            <action selector="goForward" destination="hTf-jy-juh" id="zKx-gJ-qd4"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="UXH-jF-B38"/>
+                                    <barButtonItem image="Send To" id="UyN-2O-2Q7">
+                                        <color key="tintColor" red="0.91764705879999997" green="0.30196078430000001" blue="0.14901960780000001" alpha="1" colorSpace="calibratedRGB"/>
+                                        <connections>
+                                            <action selector="webShare:" destination="ZjH-Uf-knr" id="1qd-oW-uIe"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="VNq-x4-lia"/>
+                                    <barButtonItem image="RefreshIcon" style="plain" id="ZaF-cV-G3I">
+                                        <color key="tintColor" red="0.91764705879999997" green="0.30196078430000001" blue="0.14901960780000001" alpha="1" colorSpace="calibratedRGB"/>
+                                        <connections>
+                                            <action selector="reload" destination="hTf-jy-juh" id="Za1-Py-YtQ"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <color key="tintColor" red="0.0078431377187371254" green="0.54901963472366333" blue="0.99215692281723022" alpha="1" colorSpace="deviceRGB"/>
@@ -453,9 +485,10 @@
                     <navigationItem key="navigationItem" title="File system that stores location of file in Pi" id="bZM-O2-6k1">
                         <barButtonItem key="rightBarButtonItem" style="plain" id="JWb-tA-dAw">
                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="iXV-h3-NUY">
-                                <rect key="frame" x="217" y="4" width="28" height="22"/>
+                                <rect key="frame" x="224" y="3" width="90" height="37"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" image="webComments">
+                                <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="16"/>
+                                <state key="normal" title="Comments">
                                     <color key="titleColor" red="0.99991267920000004" green="1" blue="0.99988144639999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <color key="titleShadowColor" red="0.99991267920000004" green="1" blue="0.99988144639999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
@@ -468,9 +501,14 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <nil key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="progressView" destination="ZJY-Zr-hTg" id="7dO-2F-xGr"/>
+                        <outlet property="refresh" destination="ZaF-cV-G3I" id="xgr-AC-hXg"/>
+                        <outlet property="share" destination="UyN-2O-2Q7" id="WaW-Q0-GNx"/>
                         <outlet property="viewWeb" destination="hTf-jy-juh" id="Sa8-FD-uKO"/>
+                        <outlet property="webBack" destination="6Of-Z4-Tdn" id="zo5-Lg-B23"/>
+                        <outlet property="webForward" destination="9YO-7g-K1a" id="66Q-9c-4Kb"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RB2-OL-R7r" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -597,12 +635,15 @@
         <image name="LatestIcon" width="18" height="26"/>
         <image name="Page Load" width="320" height="568"/>
         <image name="Points" width="13" height="17"/>
+        <image name="RefreshIcon" width="20" height="24"/>
+        <image name="Safari Back" width="12" height="22"/>
+        <image name="Safari Forward" width="13" height="22"/>
+        <image name="Send To" width="20" height="27"/>
         <image name="TopStoriesIcon" width="23" height="23"/>
         <image name="lockLine" width="16" height="22"/>
         <image name="story" width="26" height="26"/>
         <image name="userFull" width="20" height="21"/>
         <image name="userLine" width="21" height="22"/>
-        <image name="webComments" width="28" height="22"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
@@ -610,7 +651,7 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="8rF-nL-EbF"/>
+        <segue reference="MQs-EZ-GAP"/>
         <segue reference="cYG-mk-hRy"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" red="0.91764705882352937" green="0.30196078431372547" blue="0.14901960784313725" alpha="1" colorSpace="calibratedRGB"/>
