--- a/HackerNews/CommentTableViewCell.xib
+++ b/HackerNews/CommentTableViewCell.xib
@@ -41,39 +41,36 @@
                         <color key="textColor" red="0.57254901960000004" green="0.57254901960000004" blue="0.57254901960000004" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v3a-wY-eOD" userLabel="List Title">
-                        <rect key="frame" x="44" y="37" width="266" height="100"/>
-                        <constraints>
-                            <constraint firstAttribute="height" priority="250" constant="92" id="TAV-O1-x2w"/>
-                        </constraints>
-                        <string key="text">πfs is a revolutionary new file system that, instead of wasting space storing your data on your hard drive, stores your data in π! You'll never run out of space again - π holds every file that could possibly exist! They said 100% compression was impossible? You're looking at it!
-
-</string>
-                        <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="14"/>
+                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MHl-40-q4W">
+                        <rect key="frame" x="19" y="37" width="292" height="98"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                         <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="14"/>
+                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                        <dataDetectorType key="dataDetectorTypes" link="YES"/>
+                    </textView>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="MHl-40-q4W" firstAttribute="leading" secondItem="cKg-4E-FgZ" secondAttribute="leadingMargin" constant="11" id="EUn-Mk-oWD"/>
                     <constraint firstItem="ulc-20-Knj" firstAttribute="leading" secondItem="J6f-Aj-t1s" secondAttribute="trailing" constant="5" id="HvP-WL-WPJ"/>
+                    <constraint firstItem="MHl-40-q4W" firstAttribute="top" secondItem="yFf-ns-OMY" secondAttribute="bottom" constant="8" id="Mnp-lc-tb2"/>
                     <constraint firstAttribute="trailingMargin" secondItem="yFf-ns-OMY" secondAttribute="trailing" constant="1" id="VEQ-IL-Awo"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="MHl-40-q4W" secondAttribute="trailing" constant="1" id="W1T-6t-6Y8"/>
                     <constraint firstItem="J6f-Aj-t1s" firstAttribute="top" secondItem="cKg-4E-FgZ" secondAttribute="top" constant="9" id="blc-Q0-cPh"/>
                     <constraint firstItem="yFf-ns-OMY" firstAttribute="leading" secondItem="ulc-20-Knj" secondAttribute="trailing" constant="8" id="cOy-2c-fdR"/>
-                    <constraint firstAttribute="bottom" secondItem="v3a-wY-eOD" secondAttribute="bottom" constant="12" id="et0-Rm-3Lx"/>
                     <constraint firstItem="ulc-20-Knj" firstAttribute="top" secondItem="cKg-4E-FgZ" secondAttribute="topMargin" id="fgi-8t-hDq"/>
                     <constraint firstItem="yFf-ns-OMY" firstAttribute="top" secondItem="cKg-4E-FgZ" secondAttribute="topMargin" id="fpW-ZL-Xvr"/>
-                    <constraint firstAttribute="trailing" secondItem="v3a-wY-eOD" secondAttribute="trailing" constant="10" id="kAg-Hf-3jK"/>
-                    <constraint firstItem="v3a-wY-eOD" firstAttribute="leading" secondItem="cKg-4E-FgZ" secondAttribute="leading" constant="44" id="lKV-wd-JI6"/>
-                    <constraint firstItem="v3a-wY-eOD" firstAttribute="top" secondItem="yFf-ns-OMY" secondAttribute="bottom" constant="8" id="pV4-PQ-OSU"/>
                     <constraint firstItem="J6f-Aj-t1s" firstAttribute="leading" secondItem="cKg-4E-FgZ" secondAttribute="leading" constant="19" id="qEe-BU-fKu"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="MHl-40-q4W" secondAttribute="bottom" constant="6" id="sl3-pw-S6d"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="commentLabel" destination="v3a-wY-eOD" id="kV7-ld-pJW"/>
+                <outlet property="commentTextView" destination="MHl-40-q4W" id="bka-v6-tts"/>
                 <outlet property="timeLabel" destination="yFf-ns-OMY" id="ujh-I9-WzT"/>
                 <outlet property="userLabel" destination="ulc-20-Knj" id="0vL-i8-fSz"/>
             </connections>
-            <point key="canvasLocation" x="104" y="-323"/>
+            <point key="canvasLocation" x="104" y="-324"/>
         </tableViewCell>
     </objects>
     <resources>
